# pykingenie

./: .coverage  .gitignore  README.md  build_docs.py  coverage.xml  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pykingenie.html  pykingenie.utils.html  pyproject.toml  quickstart.html  searchindex.js
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt  pykingenie.rst.txt  quickstart.rst.txt
docs/: README.md  conf.py  examples.rst  index.rst  pykingenie.rst
notebooks/: 1_one_site_assoc_disso_simulation.ipynb  2_one_site_assoc_disso_mass_transport_simulation.ipynb  3_one_site_induced_fit.ipynb  4_one_site_conformational_selection.ipynb  5_heterogeneous_analyte_model.ipynb  7_two_site_cooperativity_model.ipynb  notebook_helpers.py
test_files/: 230309_001.frd  230309_002.frd  230309_003.frd  230309_004.frd  230309_005.frd  230309_006.frd  230309_007.frd  230309_008.frd  230309_ExpMethod.fmf  ExperimentStep.ini  Setting.ini  different_sensor_metadata.frd  kingenie_solution.csv  multi_cycle_kingenie.csv  one_column_solution.csv  sim_cs_kon-100_koff-1_kc-10_krev-100_fit_signal_E.csv  sim_solution_CS_kon-100_koff-1_kc-10_krev-100.csv  sim_solution_Kd-0.1_koff-0.01_E-20_S-0_ES-0.csv  sim_solution_kon-100_koff-100_kc-1_krev-10.csv  sim_solution_kon-100_koff-100_kc-1_krev-10_ESint-15_ES-5.csv  simulation_Kd-0.5_koff-0.01_Ktr-0.005.csv  simulation_Kd-10_koff-0.01.csv  simulation_KinGenie_kon-0.5_koff-0.005_sigma-1_plRmax-3.5_pl2_Rmax-7.csv  simulation_kon-0.1_koff-0.01_kc-1_krev-10.csv  (+6 more)
(+170 files in other folders)
